# aoc20

./: Cargo.toml
benches/: aoc.rs
input/: 01.out  02.out  03.out  04.out  05.out  06.out  07.out  08.out  09.out  10.out  11.out  12.out  13.out  14.out  15.out  16.out  17.out  18.out  19.out  20.out  21.out  22.out  23.out  24.out
src/: aoc01.rs  aoc02.rs  aoc03.rs  aoc04.rs  aoc05.rs  aoc06.rs  aoc07.rs  aoc08.rs  aoc09.rs  aoc10.rs  aoc11.rs  aoc12.rs  aoc13.rs  aoc14.rs  aoc15.rs  aoc16.rs  aoc17.rs  aoc18.rs  aoc19.rs  aoc20.rs  aoc21.rs  aoc22.rs  aoc23.rs  aoc24.rs  lib.rs  main.rs
