[package]
name = "aoc-henk"
version = "0.1.0"
authors = ["Henk van der Laan <opensource@henkvdlaan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5"
memmap = "0.7"
rustc-hash = "1.1"

[dev-dependencies]
criterion = "0.3"

#[profile.release]
#debug = true
#lto = true
#codegen-units = 1

[[bench]]
name = "aoc-henk"
harness = false
